# FER-Thesis-NNs

./: .gitignore  README.md  TODO.md  evaluate_model.py  pyproject.toml
docs/: dependencies_guide.md  guide_python11.md
modules/: config.py  data.py  loss.py  model.py
results_light/accuracy_results/: AAA_template.md  accuracies_testset_occluded.md  accuracies_testset_original.md  occluded_test_set.md  original_test_set.md
sbatch/: try_gpu_wgpu.sbatch  try_gpu_wogpu.sbatch
scripts/: evaluate_model.py  generate_h5_test_set.py  hello_world.py  try_gpu.py
