[tool.poetry]
name = "e models"
version = "0.1.0"
description = ""
authors = ["Dragos Buhnila <s331394@studenti.polito.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "2.15.0"
h5py = "^3.15.0"
numpy = ">=1.23.5,<2.0.0"
pillow = "^11.3.0"
scikit-learn = "^1.7.2"
ultralytics = "^8.3.218"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
